--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
   </head>
 
   <body>
-    <% render partial: "shared/navbar" %>
+    <%= render partial: "shared/navbar" %>
+    
     <div class="container">
       <%= yield %>
     </div>
