--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,20 +1,28 @@
 <h1>Sign Up</h1>
 
-<%= form_with model: @user, url: sign_up_path do |form| %>
+<%= form_with model: @user, url: sign_up_path, local: true do |form| %>
+    <% if @user.errors.any? %>
+        <div class="alert alert-danger">
+            <% @user.errors.full_messages.each do |message| %>
+                <div> <%= message %> </div>
+            <% end %>
+        </div>
+    <% end %>
+
     <div class="mb-3">
-    <%= form.label :email %>
-    <%= form.text_field :email , class: "form-control", placeholder: "steve@apple.com" %>
+        <%= form.label :email %>
+        <%= form.text_field :email, class: "form-control", placeholder: "steve@apple.com", autocomplete: "username" %>
     </div>
     <div class="mb-3">
-    <%= form.label :password %>
-    <%= form.text_field :password , class: "form-control", placeholder:"password" %>
+        <%= form.label :password %>
+        <%= form.password_field :password , class: "form-control", placeholder: "password", autocomplete: "new-password" %>
     </div>
     <div class="mb-3">
-    <%= form.label :password_confirmation %>
-    <%= form.text_field :password_confirmation , class: "form-control", placeholder:"password" %>
+        <%= form.label :password_confirmation %>
+        <%= form.password_field :password_confirmation , class: "form-control", placeholder:"password", autocomplete: "new-password" %>
     </div>
 
-    <div>
-        <%= form.submit "Sign Up", class: "btn btn-primary" %>
+    <div class="mb-3">
+        <%= form.submit "Sign Up", class: "btn btn-primary", data: { disable_with: false } %>
     </div>
 <% end %>
